# iPhotoSync

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  db.rs  fs_utils.rs  main.rs
