[package]
name = "iPhotoSync"
version = "0.1.0"
authors = ["Mikhail Lappo <miklelappo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.21.0" }
clap = { version = "2.33.0" }
lazy_static = { version = "1.4.0" }
indicatif = { version = "0.14.0" }
